--- a/ContosoPizza/Pages/Index.cshtml
+++ b/ContosoPizza/Pages/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home for Shirt Lovers";
+    TimeSpan timeInBusiness = DateTime.Now - new DateTime(2023,8,17 );
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome to Shirt Lovers</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
